--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,10 @@
     "package.json": "^2.0.1"
   },
   "scripts": {
+    "prettify": "prettier --write *.js **/*.js",
     "backend": "nodemon app.js"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.0"
   }
 }
